2006-03-04 Baptiste Lepilleur <gaiacrtn@free.fr>
  * contrib/xml-xsl/report.xsl: reported correction posted on the wiki.
  * removed debian/ directory. An up to date patch can be found at:
    packages.debian.org.
  * cppunit.spec.in: applied patch #1242905 partially (%post and %postun).

2006-02-04 Baptiste Lepilleur <gaiacrtn@free.fr>
  * include/cppunit/TestListener.h: 
  * src/qttestrunner/TestRunnerModel.cpp: removed compilation warning.

2006-02-01 Baptiste Lepilleur <gaiacrtn@free.fr>
  * examples/qt: integrated Ernst patch from qt examples.

2005-12-12 Baptiste Lepilleur <gaiacrtn@free.fr>
  * src/qttestrunner: integrated Ernst patch for QtTestRunner and Qt 3.x.
    Enhanced qmake project files to handle multiple build configuration

2005-11-27 Baptiste Lepilleur <gaiacrtn@free.fr>
  * doc/cookbook.dox: fixed type (patch #1334567)

2005-11-06 Baptiste Lepilleur <gaiacrtn@free.fr>
  * include/cppunit/config/SourcePrefix.h: disable warning #4996
    (sprintf is deprecated) for visual studio 2005.
  
  * include/cppunit/TestAssert.h: use sprintf_s instead of sprintf for 
    visual studio 2005.
    
  * examples/ClockerPlugIn/ClockerPlugIn.cpp
  * examples/DumperPlugIn/DumperPlugIn.cpp: use SourcePrefix.h. Fixed
    wrong macro usage to implement DllMain.
    
  * examples/msvc6/HostApp/ExamplesTestCase.h
  * examples/msvc6/HostApp/ExamplesTestCase.cpp
  * examples/simple/ExamplesTestCase.h
  * examples/simple/ExamplesTestCase.cpp: removed divideByZero test case
    as it cause some crash on some platforms.
 

2005-10-27 Baptiste Lepilleur <gaiacrtn@free.fr>
  * include/cppunit/TestAssert.h: added missing #include <stdio.h>

2005-07-30 Baptiste Lepilleur <gaiacrtn@free.fr>
  * include/cppunit/config/SourcePrefix.h: added, prefix added at begining of sources
    to remove warning. Removed most warning when compiling with VC++ 6sp6.

  * examples/money/Money.h: 
  * examples/money/MoneyTest.cpp: added assert equal usage.
