@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: CppUnit
+Description: The C++ Unit Test Library
+Version: @CPPUNIT_VERSION@
+Libs: -L${libdir} -lcppunit
+Libs.private: @LIBADD_DL@
+Cflags: -I${includedir}
